--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="avatar">
                 <img 
                     class="avatar-img"
-                    src="https://media-exp1.licdn.com/dms/image/C5603AQFOs4gdoO5h5w/profile-displayphoto-shrink_400_400/0?e=1602720000&v=beta&t=gkmuuoefrFHGlthTIq4l7qr_Pio1riPDcTNSX93MzZ0" width="150px" height="150px" alt="my avatar">
+                    src="https://media-exp1.licdn.com/dms/image/C5603AQFOs4gdoO5h5w/profile-displayphoto-shrink_400_400/0?e=1602720000&v=beta&t=gkmuuoefrFHGlthTIq4l7qr_Pio1riPDcTNSX93MzZ0" width="170px" height="170px" alt="my avatar">
                 <div class="avatar-dot yellowBackground"></div>
             </div>
             <div class="box">
@@ -21,55 +21,76 @@
                 <h2 class="profession">Full Stack Developer</h2>
             </div>
             <div class="contact-Container">
-                <h1 class="contact"><i class="fas fa-map-marker-alt yellowColor"></i> Nellore, Andhra Pradesh</h1>
-                <h1 class="contact"><i class="fas fa-phone-square-alt yellowColor"></i> 916 0212 222</h1>
-                <h1 class="contact"><i class="fas fa-envelope-square yellowColor"> </i> pmanideepnaidu@gmail.com</h1>
-                <h1 class="contact"><i class="fab fa-linkedin yellowColor"></i> Linkedin</h1>
-                <h1 class="contact"><i class="fab fa-github-square yellowColor"></i> Github </h1>
+                <h1 class="contact"><i class="fas fa-map-marker-alt contact-icon "></i> Andhra Pradesh</h1>
+                <h1 class="contact"><i class="fas fa-phone-square-alt contact-icon"></i> 916 0212 222</h1>
+                <a href="mailto:pmanideepnaidu@gmail.com" class="contact"><i class="fas fa-envelope-square contact-icon"></i> </i> pmanideepnaidu@gmail.com</a>
+                <a href="https://www.linkedin.com/in/pmanideep/" target="_blank" class="contact"><i class="fab fa-linkedin contact-icon"></i> Linkedin</a>
+                <a href="https://github.com/manideep39" target="_blank" class="contact"><i class="fab fa-github-square contact-icon"></i></i> Github </a>
             </div>
             <div class="summary">
-                <h1 class="body-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id quam imperdiet, viverradolor rhoncus, tincidunt enim. Duis hendrerit urna in massa vulputate pharetra. Interdumet malesuada fames ac ante ipsum primis in faucibus.</h1>
+                <h1 class="body-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id quam imperdiet, viverradolor rhoncus, tincidunt enim. Duis hendrerit urna in massa vulputate pharetra. Interdumet malesuada fames ac ante ipsum primis in faucibus. <span style="font-weight: bold; color: #707070; cursor: pointer;">Resume</span></h1>
             </div>
 
             <div class="technologies">
-                <img class="yellowBackground icon" src="https://santhisrikh.github.io/images/html5.svg">
-                <img class="yellowBackground icon" src="https://santhisrikh.github.io/images/css.png">
-                <img class="yellowBackground icon" src="https://santhisrikh.github.io/images/bootstrap.svg">
-                <img class="yellowBackground icon" src="https://santhisrikh.github.io/images/javascript.svg">
-                <img class="yellowBackground icon" src="https://santhisrikh.github.io/images/git.svg">
-                <img class="yellowBackground icon" src="https://santhisrikh.github.io/images/react.svg">
-                <img class="yellowBackground icon" src="https://santhisrikh.github.io/images/html5.svg">
-                <img class="yellowBackground icon" src="https://santhisrikh.github.io/images/html5.svg">
+                <div>
+                    <i class="fab fa-html5 fa-3x icon" style="background-color: #e54c27"></i>
+                    <h5 class="tech-icon-tags">HTML</h5>
+                </div>
+                <div>
+                    <i class="fab fa-css3-alt fa-3x icon" style="background-color: #254ce4"></i>
+                    <h5 class="tech-icon-tags">CSS</h5>
+                </div>
+                <div>
+                    <i class="fab fa-bootstrap fa-3x icon" style="background-color:#563d7c"></i>
+                    <h5 class="tech-icon-tags">Bootstrap</h5>
+                </div>
+                <div>
+                    <i class="fab fa-js-square fa-3x icon" style="background-color:#fcd600"></i>
+                    <h5 class="tech-icon-tags">JavaScript</h5>
+                </div>
+                <div>
+                    <i class="fab fa-react fa-3x icon" style="background-color:#00d7ff"></i>
+                    <h5 class="tech-icon-tags">React</h5>
+                </div>
+                <div>
+                    <i class="fab fa-git-alt fa-3x icon" style="background-color:#402e00"></i>
+                    <h5 class="tech-icon-tags">Git</h5>
+                </div>
             </div>
         </div>
         <div id="page2">
-            <h1 class="title">Proficiencies</h1>
+            <h1 class="title">PROFICIENCIES</h1>
             <div>
                 <div class="proficiencies">
-                    <img src="https://santhisrikh.github.io/images/react.png" />
-                    <h2>React Apps</h2>
+                    <img src="./images/proficiencies/frontend.png" />
+                    <h2>Frontend</h2>
+                    <p>Not just that I can even host the show</p>
+                </div>
+                <div class="proficiencies">
+                    <img src="./images/proficiencies/react.png" />
+                    <h2>React</h2>
                     <p>When it comes to react apps I have the strength of Atlas</p>
                 </div>
                 <div class="proficiencies">
-                    <img src="https://santhisrikh.github.io/images/react.png" />
-                    <h2>React Apps</h2>
-                    <p>When it comes to react apps I have the strength of Atlas</p>
+                    <img src="./images/proficiencies/backend.png" />
+                    <h2>Backend</h2>
+                    <p>I am the one who runs the show</p>
                 </div>
                 <div class="proficiencies">
-                    <img src="https://santhisrikh.github.io/images/react.png" />
-                    <h2>React Apps</h2>
-                    <p>When it comes to react apps I have the strength of Atlas</p>
-                </div>
-                <div class="proficiencies">
-                    <img src="https://santhisrikh.github.io/images/react.png" />
-                    <h2>React Apps</h2>
-                    <p>When it comes to react apps I have the strength of Atlas</p>
+                    <img src="/images/proficiencies/ds.png" />
+                    <h2>Data Structures</h2>
+                    <p>Putting the right blocks in the right place is just my thing</p>
                 </div>
             </div>
         </div>
         <div id="page3">
+            <h1 class="title">PROJECTS</h1>
             <div class="card-container">
                 <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
                     <img src="images/corona.png">
                     <h2>Worldmeter Clone</h2>
                     <p>Elixir is an app which provides its users a
@@ -84,6 +105,10 @@
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
                     <img src="images/chotaBhem.png">
                     <h2>Worldmeter Clone</h2>
                     <p>Elixir is an app which provides its users a
@@ -98,6 +123,10 @@
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
                     <img src="images/nutrTracker.png">
                     <h2>Worldmeter Clone</h2>
                     <p>Elixir is an app which provides its users a
@@ -112,6 +141,10 @@
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
                     <img src="images/corona.png">
                     <h2>Worldmeter Clone</h2>
                     <p>Elixir is an app which provides its users a
