--- a/index.html
+++ b/index.html
@@ -160,6 +160,45 @@
                 </div>
             </div>
         </div>
+        <div id="page4" style="margin-bottom: 200px;">
+            <div id="badges">
+                <div>
+                    <h1>1200</h1>
+                    <div>
+                        <h2> + Hours</h2>
+                        <p>of full stack coding</p>
+                    </div>
+                </div>
+                <div>
+                    <h1>240</h1>
+                    <div>
+                        <h2>+ DS</h2>
+                        <p>problems</p>
+                    </div>
+                </div>
+                <div>
+                    <h1>360</h1>
+                    <div>
+                        <h2>+ Git</h2>
+                        <p>Commits</p>
+                    </div>
+                </div>
+                <div>
+                    <h1>20</h1>
+                    <div>
+                        <h2>+ Projects</h2>
+                        <p>Commits</p>
+                    </div>
+                </div>
+                <div>
+                    <h1>100</h1>
+                    <div>
+                        <h2>+ Hours</h2>
+                        <p>of soft skill</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
