designed git commit img

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             </div>
         </div>
         <div id="page4" style="margin-bottom: 200px;">
+            <h1 class="title">STATS</h1>
             <div id="badges">
                 <div>
                     <h1>1200</h1>
@@ -172,7 +173,7 @@
                 <div>
                     <h1>240</h1>
                     <div>
-                        <h2>+ DS</h2>
+                        <h2>+ DSA</h2>
                         <p>problems</p>
                     </div>
                 </div>
@@ -196,6 +197,12 @@
                         <h2>+ Hours</h2>
                         <p>of soft skill</p>
                     </div>
+                </div>
+            </div>
+            <div class="commit-wrapper">
+                <div class="git-commit-cont">
+                    <h1>400 <span>Contributions</span><span> in the last year</span></h1>
+                    <img src="./images/commits.png" />
                 </div>
             </div>
         </div>
