added some project cards

--- a/index.html
+++ b/index.html
@@ -88,29 +88,12 @@
             <div class="card-container">
                 <div class="card">
                     <div class="card-button-container">
-                        <button class="card-button github-button"><i class="fab fa-github"></i> GitHub</button>
-                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
-                    </div>
-                    <img src="images/corona.png">
-                    <h2>Worldmeter Clone</h2>
-                    <p>Elixir is an app which provides its users a
-                        portal to read all sorts of live news, from
-                        finance to sports to entertainment, it has it
-                        all.</p>
-                    <div class="card-icons">
-                        <img src="images/icons/html.png">
-                        <img src="images/icons/css.png">
-                        <img src="images/icons/html.png">
-                        <img src="images/icons/css.png">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-button-container">
-                        <button class="card-button github-button"><i class="fab fa-github"></i> GitHub</button>
-                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                        <button class="card-button github-button" onClick="window.open('https://github.com/manideep39/CHHOTA-BHEEM')"><i class="fab fa-github"></i> GitHub</button>
+
+                        <button class="card-button live-button" onClick="window.open('https://manideep39.github.io/CHHOTA-BHEEM/index.html')"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
                     </div>
                     <img src="images/chotaBhem.png">
-                    <h2>Worldmeter Clone</h2>
+                    <h2>CHHOTA BHEEM</h2>
                     <p>Elixir is an app which provides its users a
                         portal to read all sorts of live news, from
                         finance to sports to entertainment, it has it
@@ -124,29 +107,119 @@
                 </div>
                 <div class="card">
                     <div class="card-button-container">
-                        <button class="card-button github-button"><i class="fab fa-github"></i> GitHub</button>
-                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
-                    </div>
-                    <img src="images/nutrTracker.png">
-                    <h2>Worldmeter Clone</h2>
-                    <p>Elixir is an app which provides its users a
-                        portal to read all sorts of live news, from
-                        finance to sports to entertainment, it has it
-                        all.</p>
-                    <div class="card-icons">
-                        <img src="images/icons/html.png">
-                        <img src="images/icons/css.png">
-                        <img src="images/icons/html.png">
-                        <img src="images/icons/css.png">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-button-container">
-                        <button class="card-button github-button"><i class="fab fa-github"></i> GitHub</button>
-                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                        <button class="card-button github-button" onClick="window.open('https://github.com/manideep39/Worldometer-Clone')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button" onClick="window.open('https://manideep39.github.io/Worldometer-Clone/')"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
                     </div>
                     <img src="images/corona.png">
-                    <h2>Worldmeter Clone</h2>
+                    <h2>Worldometer clone</h2>
+                    <p>Elixir is an app which provides its users a
+                        portal to read all sorts of live news, from
+                        finance to sports to entertainment, it has it
+                        all.</p>
+                    <div class="card-icons">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button" onClick="window.open('https://github.com/manideep39/Nutrition-Tracker')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button" onClick="window.open('https://manideep39.github.io/Nutrition-Tracker/')"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
+                    <img src="images/nutrTracker.png">
+                    <h2>Nutrition Tracker</h2>
+                    <p>Elixir is an app which provides its users a
+                        portal to read all sorts of live news, from
+                        finance to sports to entertainment, it has it
+                        all.</p>
+                    <div class="card-icons">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button" onClick="window.open('https://github.com/keshavmahawar/medium-clone')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
+                    <img src="images/medium.png">
+                    <h2>Medium clone</h2>
+                    <p>Elixir is an app which provides its users a
+                        portal to read all sorts of live news, from
+                        finance to sports to entertainment, it has it
+                        all.</p>
+                    <div class="card-icons">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button" onClick="window.open('https://github.com/aayushah711/masai-module-4')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button" onClick="window.open('https://slate-mrello.netlify.app')"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
+                    <img src="images/mrello.png">
+                    <h2>Trello clone</h2>
+                    <p>Elixir is an app which provides its users a
+                        portal to read all sorts of live news, from
+                        finance to sports to entertainment, it has it
+                        all.</p>
+                    <div class="card-icons">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button" onClick="window.open('https://github.com/manideep39/TRON-Game')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button" onClick="window.open('https://manideep39.github.io/TRON-Game/')"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
+                    <img src="images/tron.png">
+                    <h2>TRON game</h2>
+                    <p>Elixir is an app which provides its users a
+                        portal to read all sorts of live news, from
+                        finance to sports to entertainment, it has it
+                        all.</p>
+                    <div class="card-icons">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button" onClick="window.open('https://github.com/manideep39/Virtual-Keyboard')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button" onClick="window.open('https://manideep39.github.io/Virtual-Keyboard/')"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
+                    <img src="images/keyboard.png">
+                    <h2>Virtual keyboard</h2>
+                    <p>Elixir is an app which provides its users a
+                        portal to read all sorts of live news, from
+                        finance to sports to entertainment, it has it
+                        all.</p>
+                    <div class="card-icons">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                        <img src="images/icons/html.png">
+                        <img src="images/icons/css.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-button-container">
+                        <button class="card-button github-button" onClick="window.open('https://github.com/manideep39/Timer-Stopwatch')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button" onClick="window.open('https://manideep39.github.io/Timer-Stopwatch/')"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                    </div>
+                    <img src="images/timer.png">
+                    <h2>Google Timer Stopwatch</h2>
                     <p>Elixir is an app which provides its users a
                         portal to read all sorts of live news, from
                         finance to sports to entertainment, it has it
