--- a/index.html
+++ b/index.html
@@ -13,23 +13,35 @@
             <div class="avatar">
                 <img 
                     class="avatar-img"
-                    src="https://media-exp1.licdn.com/dms/image/C5603AQFOs4gdoO5h5w/profile-displayphoto-shrink_400_400/0?e=1602720000&v=beta&t=gkmuuoefrFHGlthTIq4l7qr_Pio1riPDcTNSX93MzZ0" width="170px" height="170px" alt="my avatar">
+                    src="https://pbs.twimg.com/profile_images/1254694824222965760/u9LDI_wr_400x400.jpg" width="170px" height="170px" alt="my avatar">
                 <div class="avatar-dot yellowBackground"></div>
             </div>
             <div class="box">
                 <h1 class="name">Manideep Pullalachervu</h1>
+            <br/>
+
                 <h2 class="profession">Full Stack Developer</h2>
             </div>
+            <br/>
+            <br/>
+            <br/>
+
             <div class="contact-Container">
                 <h1 class="contact"><i class="fas fa-map-marker-alt contact-icon "></i> Andhra Pradesh</h1>
                 <h1 class="contact"><i class="fas fa-phone-square-alt contact-icon"></i> 916 0212 222</h1>
+            <br/>
+            <br/>
+            <br/>
+
                 <a href="mailto:pmanideepnaidu@gmail.com" class="contact"><i class="fas fa-envelope-square contact-icon"></i> </i> pmanideepnaidu@gmail.com</a>
                 <a href="https://www.linkedin.com/in/pmanideep/" target="_blank" class="contact"><i class="fab fa-linkedin contact-icon"></i> Linkedin</a>
                 <a href="https://github.com/manideep39" target="_blank" class="contact"><i class="fab fa-github-square contact-icon"></i></i> Github </a>
             </div>
-            <div class="summary">
+            <!-- <div class="summary">
                 <h1 class="body-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id quam imperdiet, viverradolor rhoncus, tincidunt enim. Duis hendrerit urna in massa vulputate pharetra. Interdumet malesuada fames ac ante ipsum primis in faucibus. <span style="font-weight: bold; color: #707070; cursor: pointer;">Resume</span></h1>
-            </div>
+            </div> -->
+            <br/>
+            <br/>
 
             <div class="technologies">
                 <div>
