changed medium project link

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="card">
                     <div class="card-button-container">
-                        <button class="card-button github-button" onClick="window.open('https://github.com/keshavmahawar/medium-clone')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button github-button" onClick="window.open('https://keshavmahawar.github.io/medium-clone/')"><i class="fab fa-github"></i> GitHub</button>
                         <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
                     </div>
                     <img src="images/medium.png">
