--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="avatar">
                 <img 
                     class="avatar-img"
-                    src="https://pbs.twimg.com/profile_images/1254694824222965760/u9LDI_wr_400x400.jpg" width="170px" height="170px" alt="my avatar">
+                    src="images/avatar.jpeg" width="170px" height="170px" alt="my avatar">
                 <div class="avatar-dot yellowBackground"></div>
             </div>
             <div class="box">
@@ -22,7 +22,6 @@
 
                 <h2 class="profession">Full Stack Developer</h2>
             </div>
-            <br/>
             <br/>
             <br/>
 
@@ -37,9 +36,9 @@
                 <a href="https://www.linkedin.com/in/pmanideep/" target="_blank" class="contact"><i class="fab fa-linkedin contact-icon"></i> Linkedin</a>
                 <a href="https://github.com/manideep39" target="_blank" class="contact"><i class="fab fa-github-square contact-icon"></i></i> Github </a>
             </div>
-            <!-- <div class="summary">
-                <h1 class="body-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id quam imperdiet, viverradolor rhoncus, tincidunt enim. Duis hendrerit urna in massa vulputate pharetra. Interdumet malesuada fames ac ante ipsum primis in faucibus. <span style="font-weight: bold; color: #707070; cursor: pointer;">Resume</span></h1>
-            </div> -->
+            <div class="summary">
+                <h1 class="body-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id quam imperdiet, viverradolor rhoncus, tincidunt enim. Duis hendrerit urna in massa vulputate pharetra. Interdumet malesuada fames ac ante ipsum primis in faucibus. <a style="font-weight: bold; color: #707070; cursor: pointer;" href="https://drive.google.com/file/d/1M1TBTcK0MVmfQLyfT98XWLlQS6Tc8Cxs/view?usp=sharing">Resume</a></h1>
+            </div>
             <br/>
             <br/>
 
@@ -155,8 +154,8 @@
                 </div>
                 <div class="card">
                     <div class="card-button-container">
-                        <button class="card-button github-button" onClick="window.open('https://keshavmahawar.github.io/medium-clone/')"><i class="fab fa-github"></i> GitHub</button>
-                        <button class="card-button live-button"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
+                        <button class="card-button github-button" onClick="window.open('https://github.com/keshavmahawar/medium-clone')"><i class="fab fa-github"></i> GitHub</button>
+                        <button class="card-button live-button" onClick="window.open('https://keshavmahawar.github.io/medium-clone/')"><i class="fas fa-wifi fa-rotate-270"></i> Live <i class="fas fa-wifi fa-rotate-90"></i></button>
                     </div>
                     <img src="images/medium.png">
                     <h2>Medium clone</h2>
